@@ -247,7 +247,6 @@ gzip -9n apidocs/man/man*/* || :
   rm -f .%{__prefix}/lib/rpm/{Specfile.pm,cpanflute,cpanflute2,rpmdiff,rpmdiff.cgi,sql.prov,sql.req,tcl.req}
   rm -rf .%{__mandir}/{fr,ko}
   rm -f .%{__bindir}/rpm{e,i,u}
-  rm -f .%{__libdir}/rpm{popt,rc}
 %if %{with_python_subpackage}
   rm -f .%{__libdir}/python%{with_python_version}/site-packages/*.{a,la}
   rm -f .%{__libdir}/python%{with_python_version}/site-packages/rpm/*.{a,la}
@@ -580,6 +579,8 @@ exit 0
 %changelog
 * Tue Feb 21 2006 Jeff Johnson <jbj@jbj.org> 4.4.5-0.15
 - fix: payload reposition not needed for skipped symlinks in archive.
+- remove hoary /usr/lib/{rpmpopt,rpmrc} legacy symlinks.
+- x86_64: remove gcc warning cruft.
 
 * Mon Feb 20 2006 Jeff Johnsomn <jbj@jbj.org> 4.4.5-0.14
 - don't install on rdonly file systems (#119185).
